# wisecofre

./: .dockerignore  .env.coolify  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
apps/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/api/: exception_handler.py  pagination.py  renderers.py
apps/audit/: admin.py  middleware.py  models.py  serializers.py  services.py  urls.py  views.py
apps/core/: admin.py  models.py  services.py  urls.py  views.py  views_web.py
apps/files/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/folders/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/groups/: admin.py  models.py  serializers.py  urls.py  views.py
apps/ldap_sync/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/mfa/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/notifications/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/recovery/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/resources/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/sharing/: admin.py  apps.py  models.py  serializers.py  urls_permissions.py  (+2 more)
config/: asgi.py  celery.py  urls.py  wsgi.py
docker/: Dockerfile  docker-compose.prod.yml  entrypoint.sh
requirements/: base.txt  development.txt
templates/: base.html  dashboard.html
tests/: conftest.py  test_e2e.py
(+56 files in other folders)
